OO-5996: propagate statement to parents, remove unused code